refactor and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,10 @@ find_package(Clang REQUIRED CONFIG)
 include_directories(${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
 
 # Add executable target
-add_executable(my_clang_tool src/lib_tooling_example.cpp)
-add_executable(test src/test.cpp)
+add_executable(rosParser src/ros_parser.cpp)
 
 # Link against LLVM and Clang libraries
-target_link_libraries(my_clang_tool
+target_link_libraries(rosParser
     ${LLVM_LIBRARIES}
     ${CLANG_LIBRARIES}
     clangTooling
@@ -26,12 +25,12 @@ target_link_libraries(my_clang_tool
 
 
 # Specify C++ standard
-set_target_properties(my_clang_tool PROPERTIES
+set_target_properties(rosParser PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED YES
 )
 
 # Optionally, if you want to include Clang tooling support
-target_compile_definitions(my_clang_tool PRIVATE
+target_compile_definitions(rosParser PRIVATE
     -DCLANG_TOOLING_BUILD
 )
