add dump node info to a json per source file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
+
+set(CMAKE_PREFIX_PATH "/home/linuxbrew/.linuxbrew/opt/nlohmann-json/share/cmake/nlohmann_json")
+
 project(MyClangTool)
 
 # Find LLVM package
@@ -6,6 +9,9 @@ find_package(LLVM REQUIRED CONFIG)
 
 # Find Clang package
 find_package(Clang REQUIRED CONFIG)
+
+
+find_package(nlohmann_json REQUIRED)
 
 # Include directories
 include_directories(${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
@@ -21,6 +27,7 @@ target_link_libraries(rosParser
     clangBasic
     clangAST
     clangSupport
+    nlohmann_json::nlohmann_json
 )
 
 
