add ros rewriters and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,50 +1,55 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_PREFIX_PATH "/home/linuxbrew/.linuxbrew/opt/nlohmann-json/share/cmake/nlohmann_json")
+# set(CMAKE_PREFIX_PATH "/home/linuxbrew/.linuxbrew/opt/nlohmann-json/share/cmake/nlohmann_json")
 
-project(MyClangTool)
+project(RosParsers)
 
 find_package(LLVM REQUIRED CONFIG)
 find_package(Clang REQUIRED CONFIG)
-find_package(nlohmann_json REQUIRED)
+# find_package(nlohmann_json REQUIRED)
 
 # Include directories
 include_directories(${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
 include_directories(include)
 
-# Add executable target
-add_executable(rosParser src/ros_parser.cpp)
-target_link_libraries(rosParser # Link against LLVM and Clang libraries
+add_executable(ros_disable_timers src/ros_disable_timers.cpp)
+target_link_libraries(ros_disable_timers # Link against LLVM and Clang libraries
     ${LLVM_LIBRARIES}
     ${CLANG_LIBRARIES}
     clangTooling
     clangBasic
     clangAST
     clangSupport
-    nlohmann_json::nlohmann_json
 )
-
-# add_executable(testbench src/testbench.cpp)
-
-add_executable(generator src/generator.cpp)
-target_link_libraries(generator
-    nlohmann_json::nlohmann_json
-)
-
-add_executable(intro src/introspect.cpp)
-
-add_executable(wcet src/wcet.cpp)
-
-add_executable(stress src/stress.cpp)
-
 
 # Specify C++ standard
-set_target_properties(rosParser PROPERTIES
+set_target_properties(ros_disable_timers PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED YES
 )
 
 # Optionally, if you want to include Clang tooling support
-target_compile_definitions(rosParser PRIVATE
+target_compile_definitions(ros_disable_timers PRIVATE
+    -DCLANG_TOOLING_BUILD
+)
+
+add_executable(ros_fast_period_timers src/ros_fast_period_timers.cpp)
+target_link_libraries(ros_fast_period_timers # Link against LLVM and Clang libraries
+    ${LLVM_LIBRARIES}
+    ${CLANG_LIBRARIES}
+    clangTooling
+    clangBasic
+    clangAST
+    clangSupport
+)
+
+# Specify C++ standard
+set_target_properties(ros_fast_period_timers PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+)
+
+# Optionally, if you want to include Clang tooling support
+target_compile_definitions(ros_fast_period_timers PRIVATE
     -DCLANG_TOOLING_BUILD
 )
